# Type-Racer

./: .gitatributes  .gitattributes  Cargo.toml  README.md
project/backend/: Cargo.toml
project/backend/src/: library.rs  main.rs  routes.rs  ws.rs
project/frontend/my-app/: package-lock.json  package.json
project/frontend/my-app/src/: App.tsx
