[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = {version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] } # "full" is fine for main, "macros", "rt-multi-thread" is often enough
futures = "0.3"
# You likely do not need the hyper or hyper-util crates explicitly
# unless you are doing low-level Hyper operations.